# templates__metaprogramming

./: README.md
2__day/: CMakeLists.txt
2__day/.cache/clangd/index/: test.cpp.19AFC27B8B274AD4.idx
2__day/src/: test.cpp
2__day__enaablr_if_and_so_on/: .clang-format
3__day/: .gitignore  compile_commands.json
3__day/.cache/clangd/index/: test.cpp.05658EDD41E10BDC.idx
3__day/src/: test.cpp
3__day__any_impl/: .clang-format
